--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^4.0.2",
+    "aos": "^2.3.4",
     "bootstrap": "3",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "typed.js": "^2.0.10"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.2.1"
