--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "dependencies": {
     "@rails/webpacker": "^4.0.2",
     "aos": "^2.3.4",
-    "bootstrap": "3",
+    "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
     "typed.js": "^2.0.10"
   },
   "devDependencies": {
